[package]
name = "pythonbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
clap = { version = "4.1.8", features = ["derive"] }
actix-web = "4.3.1"
derive_more = "0.99.17"
bollard = "0.14.0"
base64 = "0.21.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
tokio-stream = "0.1.12"
